[package]
name = "futures-executor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = { version = "0.3.17", default-features = false }
futures-task = { version = "0.3.17", default-features = false }
futures-util = { version = "0.3.17", default-features = false }
